# oops

./: CHANGELOG.md  README.md  cabal.project  oops.cabal
.github/workflows/: haskell.yml
doctest/: DoctestDriver.hs
examples/: LICENSE  oops-examples.cabal
examples/src/: Examples.hs
src/Control/Monad/: Oops.hs
src/Control/Monad/Oops/: Classic.hs
src/Data/: Variant.hs
test/Data/: VariantSpec.hs
