cabal-version: 3.0

name:                   oops
version:                0.2.0.1
synopsis:               Combinators for handling errors of many types in a composable way
description:            Combinators for handling errors of many types in a composable way.
homepage:               https://www.github.com/haskell-works/oops
license:                MIT
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2023 John Ky
                        2019 Tom Harding
category:               Data
                        Control
tested-with:            GHC == 9.4.4, GHC == 9.2.5, GHC == 9.0.2, GHC == 8.10.7

source-repository head
  type: git
  location: https://github.com/haskell-works/oops

common base                           { build-depends: base                           >= 4.12       && < 5      }

common base-compat                    { build-depends: base-compat                    >= 0.10.5     && < 0.13   }
common Glob                           { build-depends: Glob                           >= 0.10.2     && < 0.11   }
common doctest                        { build-depends: doctest                        >= 0.16.2     && < 0.21   }
common doctest-discover               { build-depends: doctest-discover               >= 0.2        && < 0.3    }
common doctest-prop                   { build-depends: doctest-prop                   >= 0.2.0.1    && < 0.3    }
common exceptions                     { build-depends: exceptions                                               }
common hedgehog-quickcheck            { build-depends: hedgehog-quickcheck                                      }
common hedgehog                       { build-depends: hedgehog                                                 }
common hspec                          { build-depends: hspec                                                    }
common hw-hspec-hedgehog              { build-depends: hw-hspec-hedgehog                                        }
common lens                           { build-depends: lens                                                     }
common mtl                            { build-depends: mtl                                                      }
common QuickCheck                     { build-depends: QuickCheck                                               }
common template-haskell               { build-depends: template-haskell                                         }
common transformers                   { build-depends: transformers                                             }

common project-config
  default-language:     Haskell2010
  default-extensions:   BlockArguments
                        RankNTypes
                        ScopedTypeVariables
  ghc-options:          -Wall

library
  import:               base, project-config,
                        exceptions,
                        mtl,
                        QuickCheck,
                        transformers,
  exposed-modules:      Control.Monad.Oops
                        Data.Variant
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite doctest
  import:               base, project-config,
                        base-compat,
                        doctest,
                        doctest-discover,
                        Glob,
                        lens,
                        QuickCheck,
                        template-haskell,
  type:                 exitcode-stdio-1.0
  build-tool-depends:   doctest-discover:doctest-discover
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  hs-source-dirs:       doctest
  default-language:     Haskell2010
  build-depends:        oops

  x-doctest-components: lib

test-suite test
  import:               base, project-config,
                        base-compat,
                        doctest-discover,
                        doctest,
                        hedgehog-quickcheck,
                        hedgehog,
                        hspec,
                        hw-hspec-hedgehog,
                        lens,
                        mtl,
                        QuickCheck,
                        template-haskell,
  type:                 exitcode-stdio-1.0
  build-tool-depends:   hspec-discover:hspec-discover
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              Spec.hs
  hs-source-dirs:       test
  default-language:     Haskell2010
  build-depends:        oops
  other-modules:        Data.VariantSpec
