cabal-version: 3.0

name:                   oops-examples
version:                0.2.0.0
synopsis:               Oops examples
description:            Oops examples.
homepage:               https://www.github.com/haskell-works/oops
license:                MIT
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2023 John Ky
                        2019 Tom Harding
category:               Data
                        Control
tested-with:            GHC == 9.4.4, GHC == 9.2.5, GHC == 9.0.2, GHC == 8.10.7

source-repository head
  type: git
  location: https://github.com/haskell-works/oops

common base                           { build-depends: base                           >= 4.12       && < 5      }

common exceptions                     { build-depends: exceptions                                               }
common mtl                            { build-depends: mtl                                                      }
common oops                           { build-depends: oops                                                     }
common text                           { build-depends: text                                                     }
common transformers                   { build-depends: transformers                                             }

common project-config
  default-language:     Haskell2010
  default-extensions:   BlockArguments
                        RankNTypes
                        ScopedTypeVariables
  ghc-options:          -Wall

library
  import:               base, project-config,
                        exceptions,
                        mtl,
                        oops,
                        text,
                        transformers,
  exposed-modules:      Examples
  hs-source-dirs:       src
